@@ -1,0 +1,32 @@
+/* 2 column forms */
+.control  {
+    overflow: auto;
+}
+
+.control .label {
+    display: block;
+    float: left;
+    width: 150px;  /* non-flexible part truncates label */
+    text-align: right;
+}
+
+.control.radio .label {
+    width: auto;  /* make radio buttons look normal */
+}
+
+/*.control.checkbox .label {*/
+    /*width: auto;  make checkboxes look normal*/
+/*}*/
+
+.datetime.date, .control table, .control.radiogroup table, .control.radio table, .control.checkbox table {
+    display: inline;
+}
+
+.control-desc {
+    margin-left: 160px;  /* make description fall under input */
+}
+
+.formmoduleedit .item-actions {
+    display: inline;
+    float:  right;
+}
