@@ -56,8 +56,10 @@ class radiogroupcontrol extends formcontrol {
 		$this->id  = (empty($this->id)) ? $name : $this->id;
 		$html = "<div id=\"".$this->id."Control\" class=\"radiogroup control";
 		$html .= (!empty($this->required)) ? ' required">' : '">';
-		$html .= "<table border=0 cellspacing=0 cellpadding=0><tr>";
-		$html .= (!empty($label))?"<td><span class=\"label\">".$label."</span></td></tr><tr>":"";
+//		$html .= "<table border=0 cellspacing=0 cellpadding=0><tr>";
+//		$html .= (!empty($label))?"<td><span class=\"label\">".$label."</span></td></tr><tr>":"";
+        $html .= (!empty($label))?"<span class=\"label\">".$label."</span>":"";
+        $html .= "<table border=0 cellspacing=0 cellpadding=0><tr>";
 		$html .= "<td>".$this->controlToHTML($name, $label)."</td>";
 		$html .= "</tr></table>";
 		$html .= "</div>";			
