@@ -8,6 +8,7 @@ Added / Fixed / changed for 2.0.9
   - upgrades old school simple poll module to 2.0 style controller
   - adds help links to most admin displays
   - calendar is more forgiving of timzone changes (events won't disappear)
+  - adds new 2 column style option to forms module
   - plus many other tweaks, fixes, and features
 
 Added / Fixed / changed for 2.0.8
